fixed chat-background overlap issue

--- a/src/pages/home/Chatbot.css
+++ b/src/pages/home/Chatbot.css
@@ -5,7 +5,7 @@
   background-size: 50em;
   background-repeat: no-repeat;
   background-position: center 85%;
-  height: 57.2dvh;
+  height: 50rem;
 }
 
 .chatbot-container {
